Removing deprecations and improve code quality